# midinoise

./: .keyboard.txt.swp  .parse2.c.swp  CMakeLists.txt  Makefile  README.txt  keyboard.c  keyboard.txt  loadmid.c  loadmid.h  notes.c  notes.h  parse2.c  piano  piano.c  play.c  play.c.backup  play.h  play2.c  player  popen.c  popen.h  test  xclient  xclient.c  xkeypress  xkeypress.c  xpiano  xpiano.c
midi/: House_of_the_rising_sunHN.mid  amazing_grace_AREC.mid  auld_lang_syneCL.mid  beethoven_fur_elise_REC.mid  bra.mid  canadian_nat_anth_REC.mid  coming_round_the_mountainREC.mid  daisy.mid  export.mid  figaro.mid  first_noelCL.mid  god_save_the_queen_REC.mid  happy_birthday_cl.mid  hot_cross_bunsCL.mid  jingle_bellsREC.mid  joy_to_the_world_PW.mid  mozard.mid  o_comeREC.mid  scotland_the_brave_PW.mid  star_spangled_banner_REC.mid  tester.mid  the_entertainer_REC.mid  twinkle_twinkle.mid  updown.mid  when_the_saints.mid  wtell.mid  yankeedoodleTBNE.mid
